[package]
name = "roq-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.21", features = ["derive"] }
quinn = "0.11.5"
rcgen = "0.13.1"
rustls = { version = "0.23.17", default-features = false, features = [
  "ring",
  "logging",
  "tls12",
] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.14.1", features = ["full"] }
